--- a/EventManagementSystemApp/EventManagementSystem/Views/Shared/_Layout.cshtml
+++ b/EventManagementSystemApp/EventManagementSystem/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Tickets" asp-action="Index">Tickets</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ShoppingCarts" asp-action="Index">Shopping Cart</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
