--- a/EventManagementSystemApp/EventManagementSystem/Views/ShoppingCarts/Index.cshtml
+++ b/EventManagementSystemApp/EventManagementSystem/Views/ShoppingCarts/Index.cshtml
@@ -5,7 +5,12 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<div class="container-fluid d-flex flex-row justify-content-between">
+    <h1>Index</h1>
+    <p class="my-auto me-5 pe-5">
+        <a class="btn @(Model.AllTickets.Count != 0 ? "btn-success" : "btn-danger disabled")" asp-action="Order">Order Now</a>
+    </p>
+</div>
 
 <table class="table">
     <thead class="thead-dark">
