Implemented Order Payment with Stripe

--- a/EventManagementSystemApp/EventManagementSystem/Views/ShoppingCarts/Index.cshtml
+++ b/EventManagementSystemApp/EventManagementSystem/Views/ShoppingCarts/Index.cshtml
@@ -1,16 +1,34 @@
-﻿@using EMS.Domain
+﻿@using EMS.Domain.Settings
+@using Microsoft.Extensions.Options
 @model EMS.Domain.DTO.ShoppingCartDTO
+@inject IOptions<StripeSettings> Stripe
 
 @{
     ViewData["Title"] = "Index";
 }
 
-<div class="container-fluid d-flex flex-row justify-content-between">
+@* <div class="container-fluid d-flex flex-row justify-content-between">
     <h1>Index</h1>
     <p class="my-auto me-5 pe-5">
         <a class="btn @(Model.AllTickets.Count != 0 ? "btn-success" : "btn-danger disabled")" asp-action="Order">Order Now</a>
     </p>
-</div>
+</div> *@
+
+@if (Model.TotalPrice > 0)
+{
+    <form asp-controller="ShoppingCarts" asp-action="PayOrder" method="post">
+        <article>
+            <script src="https://checkout.stripe.com/checkout.js" 
+                class="stripe-button" 
+                data-key="@Stripe.Value.PublishableKey" 
+                data-locale="auto" 
+                data-description="Event Management System Application Payment" 
+                data-amount="@(Model.TotalPrice * 100)" 
+                data-label="Pay: @Model.TotalPrice MKD"
+            ></script> 
+        </article>
+    </form>
+}
 
 <table class="table">
     <thead class="thead-dark">
