--- a/EventManagementSystemApp/EventManagementSystem/Areas/Identity/Pages/Account/Register.cshtml
+++ b/EventManagementSystemApp/EventManagementSystem/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,48 +4,55 @@
     ViewData["Title"] = "Register";
 }
 
-<h1>@ViewData["Title"]</h1>
 
-<div class="row">
-    <div class="col-md-4">
+<div class="container p-3">
+    <div class="bg-white w-75 m-auto p-5 rounded">
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h2>Create a new account.</h2>
+            <h2 class="text-center text-primary">Create a new account.</h2>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                <label asp-for="Input.Email">Email</label>
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
+            <div class="row">
+                <div class="col-5 form-floating mb-3 mx-auto">
+                    <input asp-for="Input.FirstName" class="fs-5 form-control rounded-3" autocomplete="username" aria-required="true" placeholder="name@example.com" />
+                    <label asp-for="Input.FirstName">First Name</label>
+                    <span asp-validation-for="Input.FirstName" class="text-danger"></span>
+                </div>
+                <div class="col-5 form-floating mb-3 mx-auto">
+                    <input asp-for="Input.LastName" class="fs-5 form-control rounded-3" autocomplete="username" aria-required="true" placeholder="name@example.com" />
+                    <label asp-for="Input.LastName">Last Name</label>
+                    <span asp-validation-for="Input.LastName" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.FirstName" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                <label asp-for="Input.FirstName">First Name</label>
-                <span asp-validation-for="Input.FirstName" class="text-danger"></span>
+            <div class="row">
+                <div class="col-5 form-floating mb-3 mx-auto">
+                    <input asp-for="Input.Email" class="fs-5 form-control rounded-3" autocomplete="username" aria-required="true" placeholder="name@example.com" />
+                    <label asp-for="Input.Email">Email</label>
+                    <span asp-validation-for="Input.Email" class="text-danger"></span>
+                </div>
+                <div class="col-5 form-floating mb-3 mx-auto">
+                    <input asp-for="Input.Address" class="fs-5 form-control rounded-3" autocomplete="username" aria-required="true" placeholder="name@example.com" />
+                    <label asp-for="Input.Address">Address</label>
+                    <span asp-validation-for="Input.Address" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.LastName" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                <label asp-for="Input.LastName">Last Name</label>
-                <span asp-validation-for="Input.LastName" class="text-danger"></span>
+            <div class="row">
+                <div class="col-5 form-floating mb-3 mx-auto">
+                    <input asp-for="Input.Password" class="fs-5 form-control rounded-3" autocomplete="new-password" aria-required="true" placeholder="password" />
+                    <label asp-for="Input.Password">Password</label>
+                    <span asp-validation-for="Input.Password" class="text-danger"></span>
+                </div>
+                <div class="col-5 form-floating mb-3 mx-auto">
+                    <input asp-for="Input.ConfirmPassword" class="fs-5 form-control rounded-3" autocomplete="new-password" aria-required="true" placeholder="password" />
+                    <label asp-for="Input.ConfirmPassword">Confirm Password</label>
+                    <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.Address" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                <label asp-for="Input.Address">Address</label>
-                <span asp-validation-for="Input.Address" class="text-danger"></span>
+            <div class="d-flex justify-content-center pt-2">
+                <button id="registerSubmit" type="submit" class="fs-5 w-50 btn btn-lg btn-primary">Register</button>
             </div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
-                <label asp-for="Input.Password">Password</label>
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
-            </div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
-                <label asp-for="Input.ConfirmPassword">Confirm Password</label>
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            </div>
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </form>
     </div>
-    <div class="col-md-6 col-md-offset-2">
+@*     <div class="col-md-6 col-md-offset-2">
         <section>
             <h3>Use another service to register.</h3>
             <hr />
@@ -75,7 +82,7 @@
             }
         </section>
     </div>
-</div>
+ *@</div>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
