--- a/EventManagementSystemApp/EventManagementSystem/Views/Events/Create.cshtml
+++ b/EventManagementSystemApp/EventManagementSystem/Views/Events/Create.cshtml
@@ -4,31 +4,32 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
-
-<h4>Event</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="container p-3">
+    <div class="bg-white w-50 p-5 m-auto rounded">
+        <button class="btn btn-outline-secondary" onclick="history.back()">
+            <i class="bi bi-arrow-left"></i> Back
+        </button>
+        <h2 class="text-center">Create Event</h2>
+        <hr/>
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="EventName" class="control-label"></label>
-                <input asp-for="EventName" class="form-control" />
+            <div class="form-floating mb-3">
+                <input asp-for="EventName" class="fs-5 form-control rounded-3" />
+                <label asp-for="EventName" class="form-label">Event Name</label>
                 <span asp-validation-for="EventName" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="EventDescription" class="control-label"></label>
-                <input asp-for="EventDescription" class="form-control" />
+            <div class="form-floating mb-3">
+                <input asp-for="EventDescription" class="fs-5 form-control rounded-3" />
+                <label asp-for="EventDescription" class="form-label">Event Description</label>
                 <span asp-validation-for="EventDescription" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="EventImage" class="control-label"></label>
-                <input asp-for="EventImage" class="form-control" />
+            <div class="form-floating mb-3">
+                <input asp-for="EventImage" class="fs-5 form-control rounded-3" />
+                <label asp-for="EventImage" class="form-label">Event Image URL</label>
                 <span asp-validation-for="EventImage" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            </div>       
+            <div class="form-group d-flex justify-content-center">
+                <input type="submit" value="Create" class="fs-5 w-25 btn btn-primary" />
             </div>
         </form>
     </div>
