--- a/EventManagementSystemApp/EventManagementSystem/Views/Events/Delete.cshtml
+++ b/EventManagementSystemApp/EventManagementSystem/Views/Events/Delete.cshtml
@@ -4,36 +4,36 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Event</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.EventName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.EventName)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.EventDescription)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.EventDescription)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.EventImage)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.EventImage)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+<div class="container p-3">
+    <div class="w-75 m-auto rounded p-5 bg-white">
+        <h4 class="text-center text-secondary">Are you sure you want to delete this event?</h4>
+        <hr />
+        <dl class="row">
+            <div class="col-4">
+                <img src="@Model.EventImage" width="100%"/>
+            </div>
+            <div class="col-8 row">
+                <dt class="col-sm-4">
+                    @Html.DisplayNameFor(model => model.EventName)
+                </dt>
+                <dd class="col-sm-8">
+                    @Html.DisplayFor(model => model.EventName)
+                </dd>
+                <hr class="mx-3"/>
+                <dt class="col-sm-4">
+                    @Html.DisplayNameFor(model => model.EventDescription)
+                </dt>
+                <dd class="col-sm-8">
+                    @Html.DisplayFor(model => model.EventDescription)
+                </dd>
+             </div>
+        </dl>
+        <form asp-action="Delete">
+            <input type="hidden" asp-for="Id" />
+            <a asp-action="Index" class="btn btn-outline-secondary">
+                <i class="bi bi-arrow-left"></i> Back
+            </a> | 
+            <input type="submit" value="Delete" class="btn btn-danger" />
+        </form>
+    </div>
 </div>
