--- a/EventManagementSystemApp/EventManagementSystem/Views/Events/Index.cshtml
+++ b/EventManagementSystemApp/EventManagementSystem/Views/Events/Index.cshtml
@@ -4,11 +4,11 @@
     ViewData["Title"] = "Index";
 }
 
-<div class="container-fluid">
-    <div class="d-flex justify-content-between">
-        <p class="fs-1">Events</p>
-        <div class="m-3">
-            <a asp-action="Create" class="btn btn-success">Create New Event</a>
+<div class="container py-2">
+    <div class="d-flex justify-content-between pt-2">
+        <p class="h1 text-white m-0 ps-4">All Events</p>
+        <div class="pe-4 d-flex align-items-center">
+            <a asp-action="Create" class="btn btn-secondary">Create New Event</a>
         </div>
     </div>
     <hr />
@@ -30,22 +30,15 @@
                 <p class="card-text">@item.EventDescription</p>
               </div>
               <div class="card-footer">
-                <a href="/Events/Edit/@item.Id" class="btn btn-info" style="float:right; margin-left: 10px;">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
-                        <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325"/>
-                    </svg>
+                 <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning">
+                    <i class="bi bi-pencil-square"></i> 
+                </a> 
+                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-info">
+                    <i class="bi bi-info-circle"></i> 
+                </a> 
+                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">
+                    <i class="bi bi-trash3"></i> 
                 </a>
-                <a href="/Events/Delete/@item.Id" class="btn btn-danger" style="float:right; margin-left: 10px;">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
-                        <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5M11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47M8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5"/>
-                    </svg>
-                </a>
-
-                 <a href="/Events/Details/@item.Id" class="btn btn-warning" style="float:right; margin-left: 10px;">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-info-circle" viewBox="0 0 16 16">
-                        <path d="M8 0a8 8 0 1 0 8 8A8 8 0 0 0 8 0zm0 14a6 6 0 1 1 6-6 6 6 0 0 1-6 6zm0-7a1 1 0 0 0-1 1v3a1 1 0 0 0 2 0V8a1 1 0 0 0-1-1zm0-3a1 1 0 1 0-1-1 1 1 0 0 0 1 1z"/>
-                    </svg>
-                 </a>
               </div>
             </div>
         </div>
