--- a/EventManagementSystemApp/EventManagementSystem/Views/Tickets/Create.cshtml
+++ b/EventManagementSystemApp/EventManagementSystem/Views/Tickets/Create.cshtml
@@ -3,15 +3,17 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create Ticket</h1>
-
-<hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="container p-3">
+    <div class="bg-white w-50 p-5 m-auto rounded">
+        <button class="btn btn-outline-secondary" onclick="history.back()">
+            <i class="bi bi-arrow-left"></i> Back
+        </button>
+        <h2 class="text-center">Create Ticket</h2>
+        <hr />
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-            <div class="form-group">
+            <div class="form-group my-2">
                 <label asp-for="ScheduledEventId">Scheduled Event</label>
                     @Html.DropDownListFor(model => model.ScheduledEventId,
                          new SelectList(Model.ListModel, "Id", "EventNameDisplay"),
@@ -19,15 +21,16 @@
                         new { @class = "form-control", i = "ScheduledEventId"})
             </div>
 
-            <div class="form-group">
+            <div class="form-group my-2">
                 <label asp-for="TicketPrice" class="control-label">Ticket Price</label>
                 <input asp-for="TicketPrice" class="form-control" />
                 <span asp-validation-for="TicketPrice" class="text-danger"></span>
             </div>
 
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="form-group d-flex justify-content-center">
+                <input type="submit" value="Create" class="fs-5 w-25 btn btn-primary" />
             </div>
+
         </form>
     </div>
 </div>
