--- a/EventManagementSystemApp/EventManagementSystem/Views/Tickets/Delete.cshtml
+++ b/EventManagementSystemApp/EventManagementSystem/Views/Tickets/Delete.cshtml
@@ -3,28 +3,32 @@
 @{
     ViewData["Title"] = "Delete";
 }
+<div class="container p-3">
+    <div class="w-75 m-auto rounded p-5 bg-white">
+        <h4 class="text-center text-secondary">Are you sure you want to delete this event?</h4>
+        <hr />
 
-<h3>Are you sure you want to delete this ticket?</h3>
-<div>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TicketPrice)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TicketPrice)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ScheduledEvent)
-        </dt>
-        <dd class = "col-sm-10">
-            @Model.TicketDisplayString
-        </dd>
-    </dl>
+        <dl class="row">
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.TicketPrice)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.TicketPrice)
+            </dd>
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.ScheduledEvent)
+            </dt>
+            <dd class = "col-sm-10">
+                @Model.TicketDisplayString
+            </dd>
+        </dl>
     
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+        <form asp-action="Delete">
+            <input type="hidden" asp-for="Id" />
+            <a asp-action="Index" class="btn btn-outline-secondary">
+                <i class="bi bi-arrow-left"></i> Back
+            </a> |
+            <input type="submit" value="Delete" class="btn btn-danger" />
+        </form>
+    </div>
 </div>
