--- a/EventManagementSystemApp/EventManagementSystem/Views/Tickets/Edit.cshtml
+++ b/EventManagementSystemApp/EventManagementSystem/Views/Tickets/Edit.cshtml
@@ -4,10 +4,13 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit ticket</h1>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="container p-3">
+    <div class="bg-white w-50 p-5 m-auto rounded">
+        <button class="btn btn-outline-secondary" onclick="history.back()">
+            <i class="bi bi-arrow-left"></i> Back
+        </button>
+        <h2 class="text-center">Edit Ticket</h2>
+        <hr />
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
@@ -15,13 +18,17 @@
             <input type="hidden" asp-for="ScheduledEventId" />
 
             <div class="form-group">
+                <label asp-for="ScheduledEvent" class="control-label"></label>
+                <input type="text" class="form-control" value="@Model.TicketDisplayString" disabled readonly>
+            </div>
+
+            <div class="form-group">
                 <label asp-for="TicketPrice" class="control-label"></label>
                 <input asp-for="TicketPrice" class="form-control" />
                 <span asp-validation-for="TicketPrice" class="text-danger"></span>
             </div>
-            <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+            <div class="form-group d-flex justify-content-center my-2">
+                <input type="submit" value="Update" class="fs-5 w-25 btn btn-primary" />
             </div>
         </form>
     </div>
