--- a/EventManagementSystemApp/EventManagementSystem/Views/Tickets/Index.cshtml
+++ b/EventManagementSystemApp/EventManagementSystem/Views/Tickets/Index.cshtml
@@ -4,38 +4,53 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Tickets</h1>
-
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.TicketPrice)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ScheduledEvent)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-    @foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.TicketPrice)
-            </td>
-            <td>
-                @item.TicketDisplayString
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="AddToShoppingCart" asp-route-id="@item.Id">Add to Cart</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-    }
-    </tbody>
-</table>
+<div class="container py-2">
+    <div class="bg-white w-100 rounded-3 p-4 m-4">
+        <div class="d-flex justify-content-between pt-2">
+            <p class="h1 text-primary m-0 ps-4">All Tickets</p>
+            <div class="pe-4 d-flex align-items-center">
+                <a asp-action="Create" class="btn btn-primary">Create New Ticket</a>
+            </div>
+        </div>
+        <hr/>
+        <table class="table table-striped w-100 my-3">
+            <thead>
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.TicketPrice)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.ScheduledEvent)
+                    </th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+            @foreach (var item in Model) {
+                <tr>
+                    <td class="ps-3">
+                        @Html.DisplayFor(modelItem => item.TicketPrice) MKD
+                    </td>
+                    <td>
+                        @item.TicketDisplayString
+                    </td>
+                    <td class="d-flex justify-content-end">
+                        <a asp-action="AddToShoppingCart" asp-route-id="@item.Id" class="btn btn-outline-success mx-2">
+                            <i class="bi bi-cart-plus"></i> Add to Cart
+                        </a> |
+                            <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-warning mx-2">
+                            <i class="bi bi-info-circle"></i> Edit
+                        </a> |
+                            <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-danger mx-2">
+                            <i class="bi bi-trash3"></i> Delete
+                        </a> |
+                            <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-info mx-2">
+                                <i class="bi bi-info-circle"></i> Details
+                        </a>
+                    </td>
+                </tr>
+            }
+            </tbody>
+        </table>
+    </div>
+</div>
