Improved UI for Shopping Cart

--- a/EventManagementSystemApp/EventManagementSystem/Views/ShoppingCarts/OrderConfirmation.cshtml
+++ b/EventManagementSystemApp/EventManagementSystem/Views/ShoppingCarts/OrderConfirmation.cshtml
@@ -1,1 +1,8 @@
-﻿<div>Order Confirmed</div>
+﻿<div class="container p-3">
+    <div class="w-75 m-auto rounded p-5 bg-white text-center">
+        <p class="h3">Order Confirmed</p>
+        <a class="btn btn-secondary" asp-action="Index" asp-controller="Tickets">
+            <i class="bi bi-arrow-left"></i> Back
+        </a>
+    </div>
+</div>
