--- a/EventManagementSystemApp/EventManagementSystem/Views/ShoppingCarts/NotSuccessPayment.cshtml
+++ b/EventManagementSystemApp/EventManagementSystem/Views/ShoppingCarts/NotSuccessPayment.cshtml
@@ -1,1 +1,8 @@
-﻿<div>Not Successful Payment</div>
+﻿<div class="container p-3">
+    <div class="w-75 m-auto rounded p-5 bg-white text-center">
+        <p class="h3">Unsuccessful Payment</p>
+        <a class="btn btn-secondary" asp-action="Index" asp-controller="Tickets">
+            <i class="bi bi-arrow-left"></i> Back
+        </a>
+    </div>
+</div>
