--- a/EventManagementSystemApp/EventManagementSystem/Views/Shared/_Layout.cshtml
+++ b/EventManagementSystemApp/EventManagementSystem/Views/Shared/_Layout.cshtml
@@ -36,9 +36,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark text-white fs-5" asp-area="" asp-controller="Partner" asp-action="Index">Partner Books</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item ms-3">
                             <a class="nav-link position-relative text-white text-white fs-5" asp-area="" asp-controller="ShoppingCarts" asp-action="Index">
-                                Shopping Cart
+                                <i class="bi bi-cart4"></i>
                                 <span id="cart-count" class="position-absolute top-15 start-100 translate-middle badge rounded-pill bg-danger">
                                     0
                                 </span>
